# lyra

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
public/: splashscreen.html
src/: main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FeatherIcon.tsx  Footer.tsx  Form.tsx  Header.tsx  InfoFile.tsx  ItemFile.tsx  ListContainer.tsx  ListFiles.tsx  Loading.tsx  MainContainer.tsx  MenuFile.tsx  MenuPaperFile.tsx  ModifiedFile.tsx  NoFiles.tsx  NoMatches.tsx  Placeholder.tsx  Pruebas.tsx  TypingAnimation.tsx  WordsFile.tsx  ZoneToOpenList.tsx
src/hooks/: useConfig.ts  useFile.ts  useLoading.tsx  usePreferences.ts  useStorage.ts
src/pages/: Backup.tsx  BackupCopy.tsx  Contact.tsx  FileContent.tsx  List.tsx  ListView.tsx  Preferences.tsx  Presentation.tsx  Settings.tsx  Support.tsx  Updates.tsx
src/store/: configStore.ts  fileStore.ts  searchStore.ts
src/translate/: dictionary.ts
src/utils/: commands.ts  consts.ts  dictionary.ts  fileStore.ts  helpers.ts  store.ts  types.ts
