[package]
name = "lyra"
version = "1.0.0"
description = "lyra app"
authors = ["gixi"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "fs-rename-file",
    "shell-open",
    "fs-exists",
    "fs-remove-file",
    "fs-read-dir",
    "path-all",
    "fs-write-file",
    "fs-read-file",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
