[package]
name = "Lyra"
version = "1.1.0"
description = "Lyra: focused writing"
authors = ["gixi"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gixilym/lyra"


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater",
    "window-set-fullscreen",
    "window-unmaximize",
    "window-set-maximizable",
    "window-maximize",
    "fs-create-dir",
    "fs-rename-file",
    "shell-open",
    "fs-exists",
    "fs-remove-file",
    "fs-read-dir",
    "path-all",
    "fs-write-file",
    "fs-read-file",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
